--- a/Youtube-Slider-Tabs/style.css
+++ b/Youtube-Slider-Tabs/style.css
@@ -26,6 +26,7 @@ body {
     color: #fff;
     padding: 1rem;
     border-radius: .6rem;
+    overflow: hidden;
 }
 
 .slider .icon {
@@ -61,7 +62,7 @@ body {
     width: 2.4rem;
     height: 2.4rem;
     border-radius: 50%;
-    
+
     text-align: center;
     font: 200 2rem / 2.4rem "poppins", sans-serif;
 }
